--- a/lab7/css/lab7.css
+++ b/lab7/css/lab7.css
@@ -4,7 +4,7 @@ h1{
   text-decoration: underline  Black;
 }
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-90deg, blue, lightblue, pink, purple);
 	background-size: 400% 400%;
 	animation: gradient 5s ease infinite;
 	height: 100vh;
